@@ -21,7 +21,10 @@
 #define __RQuantLib_h__
 
 #include "rquantlib_internal.h"        	// old rquantlib.h
-//#include "rquantlib_wrappers.h"         // as<> and wrap
+#include "rquantlib_wrappers.h"         // as<> and wrap
+#if defined(RQuantLib_Plugin)
+#include "rquantlib_impl.h"         	// as<> and wrap implementation
+#endif
 #include "RQuantLib_RcppExports.h"
 
 #endif // __RQuantLib_h__
